# dsp-form

./: .gitignore  ASSUMPTION_LEDGER.md  LICENSE  PRIVACY_ETHICS.md  README.md  pyproject.toml  requirements.txt
audio/: README.md
blender/scripts/: render_obj_preview.py
data/: README.md
data/indexes/: dspFORMtest_growth_profiles_index.json
docs/: DYNAMIC_FORMS.md  concept.md  control_mapping.md  eisenscript_dsp_mapping.md  equipment_prep.md  geometry_grammars.md  known_limitations.md  manifests.md  mesh_health_checklist.md  practical_workflow.md  references.md  roadmap.md  structuresynth_pipeline.md  structuresynth_sanity_check.md  teaching_notes.md
examples/01_spectrogram_terrain/: README.md
examples/02_waveform_ribbon/: README.md
examples/03_circular_vessel/: README.md
examples/04_control_trace_form/: README.md
examples/05_structuresynth_grammar_body/: README.md
examples/06_growth_body_profiles/: README.md
outputs/: README.md
pipelines/structuresynth/: README.md
pipelines/structuresynth/presets/: onset_lattice_default.json
pipelines/structuresynth/scripts/: wav_to_eisenscript.py
sketches/processing/waveform_obj_export/: waveform_obj_export.pde
src/dspform/: __init__.py  audio_features.py  cli.py  form_state.py  gestures.py  structuresynth.py  utils.py
src/dspform/generators/: growth_body.py  helix.py  implicit_field.py  ribbon.py  terrain.py  vessel.py
src/dspform/mesh/: export.py  (+2 more)
tests/: test_cli_validation.py  test_dynamic_forms.py  test_mesh_generation.py  test_seeded_geometry_controls.py  test_structuresynth_generation.py
(+5 files in other folders)
