[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dsp-form-lab"
version = "0.1.0"
description = "Generate OBJ/STL-ready 3D forms from audio, DSP features, seeds, and control traces."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "Ben Severns" }
]
dependencies = [
  "numpy>=1.24",
  "scipy>=1.10",
  "librosa>=0.10",
  "soundfile>=0.12",
  "trimesh>=4.0",
  "scikit-image>=0.22",
  "matplotlib>=3.7"
]

[project.optional-dependencies]
repair = ["pymeshlab>=2023.12"]
dev = ["pytest>=7.4", "ruff>=0.4"]

[project.scripts]
dspform = "dspform.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
